# EigenFit

./: CellData.py  DimensionReduction.py  EigenFit.py  LICENCE.txt  LinearCombinationFit.py  MapSeries.py  Operando Raman data processing.pptx  README.md  Spectrum.py  SpectrumMap.py  TwoPassFit.py  convert_thermofisher_map.py  how_to_use.txt  pyproject.toml
.github/workflows/: publish.yml
Demo/: Operando Raman data processing.pptx  Operando Raman with EigenFit - demo notebook.ipynb  Readme.txt
Demo/Dev/: EigenFit development notebook.ipynb
Demo/Dev/example_data/CRE_manual_selection/: discharge1.npy
Demo/EigenFit/: CRE_stacks.py  CellData.py  CycVolt.py  DimensionReduction.py  EigenFit.py  EigenFitResults.py  KnnAnalyze_221025.py  MapSeries.py  MultiCycVolt.py  SpectrumMap.py  make_fitresults_model.py  mpt_to_df.py  plot_functions.py  snv.py  summary_graphs.py
Demo/example_data/1_pass_fit/discharge1/1.547/: fitted_lorentzian_params.npy  fitted_spectra.npy  time_to_fit.npy
Demo/example_data/1_pass_fit/discharge1/1.611/: fitted_lorentzian_params.npy  fitted_spectra.npy  time_to_fit.npy
Demo/example_data/1_pass_fit/discharge1/1.675/: fitted_lorentzian_params.npy  fitted_spectra.npy  time_to_fit.npy
Demo/example_data/1_pass_fit/discharge1/1.739/: fitted_lorentzian_params.npy  fitted_spectra.npy  time_to_fit.npy
Demo/example_data/CRE_manual_selection/: charge1.npy  charge4.npy
Demo/example_data/discharge1/: Readme.txt
Demo/example_data/selected_peaks/: c1_pc1_sp.npy  c1_pc2_sp.npy  c4_pc1_sp.npy  c4_pc2_sp.npy  d1_pc1_sp.npy  d1_pc2_sp.npy
Jan2026/code/: CycVolt.py  mpt_to_df.py
eigenfit-0.1.1/EigenFit/: DimensionReduction.py  LinearCombinationFit.py  MapSeries.py  Spectrum.py  TwoPassFit.py  __init__.py  percentile_vmax.py
eigenfit-0.1.1/EigenFit/.ipynb_checkpoints/: SpectrumMap-checkpoint.py
eigenfit-0.1.1/eigenfit-0.1.1.dist-info/: METADATA  RECORD  top_level.txt
old_versions/: CellData.py  FitResults.py
src/EigenFit/: OnePassFit.py  SelectPeaks.py  make_lorentzian_params.py
src/EigenFit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/EigenFit/.ipynb_checkpoints/: convert_thermofisher_map-checkpoint.py
(+129 files in other folders)
