[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "EigenFit"
version = "0.1.0"
description = "Tools for spectral fitting and map analysis"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  {name = "Your Name"}
]

[tool.setuptools.packages.find]
where = ["src"]