[build-system]
requires = ["setuptools>=77", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "EigenFit"
version = "0.1.2"
description = "Tools for spectral fitting and Raman map analysis, including rapid fitting of low signal-to-noise ratio data using principal component analysis."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"

authors = [
  { name = "Liam Bird", email = "liam.bird@eng.ox.ac.uk" }
]

dependencies = [
  "numpy",
  "matplotlib",
  "lmfit",
  "scikit-learn",
  "ipywidgets",
  "BaselineRemoval",
  "tqdm"
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/LiamBird/EigenFit"
Issues = "https://github.com/LiamBird/EigenFit/issues"

[tool.setuptools.packages.find]
where = ["src"]
